--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 BASE_URL=http://localhost:8080
 MONGODB_URI=mongodb://localhost:27017/test
-SITE_CONTACT_EMAIL=youremail@yourdomain.com
+SITE_CONTACT_EMAIL=smatusiak@gmail.com
 
 SESSION_SECRET=Your Session Secret goes here
 
